# ai-debate-orchestrator

./: .env-example  .gitignore  LICENSE  README.md  pyproject.toml
config/: pricing.json  rate_limits.json  setup.json
debate_history/: 20260527_135948_AI_will_replace_human_jobs.json
docs/: PLAN.md  PRD.md  TODO.md
docs/images/archive/: README.md
examples/: sample_debate.json  sample_output.txt
src/agents/: base_agent.py  con_son_agent.py  father_agent.py  pro_son_agent.py
src/engine/: debate_engine.py  state_manager.py
src/infrastructure/: config_loader.py  cost_reporter.py  gatekeeper.py  llm_provider.py  logger_manager.py  watchdog.py
src/schemas/: debate_message.json  verdict.json
src/skills/: base_skill.py  logic_analyzer_tool.py  web_search_tool.py
src/ui/: app.py  cli_output.py  debate_cli.py  debate_history_cli.py
templates/: index.html
tests/: conftest.py
tests/integration/: conftest.py  test_full_debate.py  test_web_search_integration.py
tests/unit/: test_amjad_fixes.py  test_base_agent.py  test_base_skill.py  test_con_son_agent.py  test_config_loader.py  test_cost_reporter.py  test_debate_cli.py  test_debate_engine.py  test_father_agent.py  test_gatekeeper.py  test_logger_manager.py  test_logic_analyzer_tool.py  test_pro_son_agent.py  test_state_manager.py  test_watchdog.py  test_web_app.py  test_web_search_tool.py
