[project]
name = "ai-debate-system"
version = "0.1.0"
description = "Multi-agent AI debate orchestration system"
requires-python = ">=3.11"
authors = [{ name = "NajAmjad" }]
dependencies = [
    "anthropic>=0.30.0",
    "flask>=3.0.0",
    "jsonschema>=4.22.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.uv]
package = true

[project.scripts]
debate     = "src.ui.debate_cli:run"
debate-web = "src.ui.app:main"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=85"
markers = [
    "slow: marks tests as slow (integration tests requiring live API calls)",
]
